--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
+    <script src="https://kit.fontawesome.com/7ef3657719.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7ef3657719.js" crossorigin="anonymous"></script>
     <!-- css -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -527,55 +530,9 @@
     <div class="question-title">
         <p>よくある質問</p>
     </div>
-    <!-- <div class="question-list">
-        <div class="question-item">
-            <p>プログラミングスキルは必要ですか？</p>
-        </div>
-        <div class="question-item">
-            <p>参加費以上に稼げなかったらどうなりますか？</p>
-        </div>
-        <div class="question-item">
-            <p>滞在中の宿泊先はどうなりますか？</p>
-        </div>
-        <div class="question-item">
-            <p>追加でかかる費用はありますか？</p>
-        </div>
-        <div class="question-item">
-            <p>就職、転職はできますか？</p>
-        </div>
-        <div class="question-item">
-            <p>フリーランスにならなければならないのですか？</p>
-        </div>
-        <div class="question-item">
-            <p>ノマドワーカー的に世界を旅しながら働きたいです。可能ですか？</p>
-        </div>
-        <div class="question-item">
-            <p>学ぶプログラミング言語はなんですか？</p>
-        </div>
-        <div class="question-item">
-            <p>将来的にwebサービス、アプリ、メディアを作りたいです。</p>
-        </div>
-        <div class="question-item">
-            <p>次回開催の予定はありますか？</p>
-        </div>
-        <div class="question-item">
-            <p>海外に出るのが初めてで不安です。</p>
-        </div>
-        <div class="question-item">
-            <p>タイ語、英語が一切話せません。参加可能でしょうか。</p>
-        </div>
-        <div class="question-item">
-            <p>次回開催の予定はありますか？</p>
-        </div>
-        <div class="question-item">
-            <p>治安はどうですか？</p>
-        </div>
-        <div class="question-item">
-            <p>パソコンは必要ですか？</p>
-        </div> -->
         <ul class="qa-list" style="list-style: none;">
             <li class="qa-list-item">
-                <h3 class="qa-list-title">プログラミングスキルは必要ですか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>プログラミングスキルは必要ですか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         いいえ、必要ありません。しかし、iSaraでは参加費以上の金額が稼げることを保障しています。 従って、事前通話面談時点で簡単なテストを実施し、場合によってはお断りをしております。この点だけはご了承ください。
@@ -583,7 +540,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">参加費以上に稼げなかったらどうなりますか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>参加費以上に稼げなかったらどうなりますか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         参加費である258,000円以上の金額をトータルで稼ぐまで、無期限でサポート延長いたします。（講座参加後、週30時間以上の実践をすることと、週１回の実践報告をすることが延長条件です。）きちんと学び実践すれば、フリーランスでも収入を作ることは十分に可能です。
@@ -591,7 +548,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">滞在中の宿泊先はどうなりますか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>滞在中の宿泊先はどうなりますか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         宿泊費用が必要ですが、iSara提携のホステルに宿泊することになりますので心配はありません。
@@ -599,7 +556,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">滞在中の食事はどうなりますか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>滞在中の食事はどうなりますか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         拠点となる新築シェアハウスの周辺に、50バーツ程度の（160円）安価な飲食店が多数あります。 日本食レストランもありますし、出前を取ることも可能です。
@@ -607,7 +564,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">追加でかかる費用はありますか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>追加でかかる費用はありますか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         宿泊費（トータル20000円）と食費（一食150円程度）くらいです。
@@ -615,7 +572,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">就職、転職はできますか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>就職、転職はできますか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         DODAの調査によると、2017年のエンジニアの求人倍率は7.5倍です。これは、人材不足が叫ばれる医療業界（医師：6倍、看護師：3倍）よりも高い数値です。ですのできちんとしたスキルを身につけることができれば、就職・転職には困らないはずです。元リクルートの転職のプロも運営スタッフとして参加しています。
@@ -623,7 +580,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">フリーランスにならなければならないのですか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>フリーランスにならなければならないのですか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         いいえ、必ずフリーランスにならないといけないわけではありません。 実際に過去の卒業生の方の進路も、独立、副業として続ける、就職するなど様々です。
@@ -631,7 +588,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">ノマドワーカー的に世界を旅しながら働きたいです。可能ですか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>ノマドワーカー的に世界を旅しながら働きたいです。可能ですか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         きちんと努力し、スキルを身に着けることができれば可能です。 iSaraは、「好きなときに働き、好きなときに遊ぶ」という人生を送れる人を増やすために開講しました。 ちなみに、講師は全員ノマドワーカーとして、働きながら自由に世界中を旅しています。
@@ -639,7 +596,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">学ぶプログラミング言語はなんですか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>学ぶプログラミング言語はなんですか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         HTML / CSS / PHPを学びます。どの言語も需要が高いです。
@@ -647,7 +604,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">将来的にwebサービス、アプリ、メディアを作りたいです。</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>将来的にwebサービス、アプリ、メディアを作りたいです。<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         経験してる講師がいますよ。大丈夫です。
@@ -655,7 +612,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">次回開催の予定はありますか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>次回開催の予定はありますか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         未定です。まずはお問合せください。
@@ -663,7 +620,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">海外に出るのが初めてで不安です。</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>海外に出るのが初めてで不安です。<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         講師陣が現地での生活をサポートしますので安心してください。ただしパスポート取得は必要です。
@@ -671,7 +628,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">タイ語、英語が一切話せません。参加可能でしょうか。</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>タイ語、英語が一切話せません。参加可能でしょうか。<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         タイ語スタッフ、英語スタッフがいるのでOKです。日本人、タイ人スタッフがおりますので、期間中のトラブル対応の心配は必要ありません。
@@ -679,7 +636,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">治安はどうですか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>治安はどうですか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         バンコクは、東南アジアや南アジアの他の国の都市部と比べると、街中も整備されており、非常に治安の良い街です。日本ほどではないですが、世界でも非常に治安の良い国として知られています。
@@ -687,7 +644,7 @@
                 </div>
             </li>
             <li class="qa-list-item">
-                <h3 class="qa-list-title">パソコンは必要ですか？</h3>
+                <h3 class="qa-list-title"><i class="fa fa-question-circle-o" aria-hidden="true"></i>パソコンは必要ですか？<i class="fa-solid fa-chevron-up"></i></h3>
                 <div class="qa-list-content">
                     <p class="qa-list-txt">
                         はい。ノートPCのご用意が必要です。
@@ -713,5 +670,11 @@
 </footer>
 </main>
 <script src="js/accordion.js"></script>
+<script>$(function(){
+	$('qa-list-title').click(function(){
+		$(this).toggleClass('selected');
+		$(this).next().slideToggle();
+	});
+});</script>
 </body>
 </html>
